SUBDIRS = ietf mcast programs mp4v2

EXTRA_DIST = \
	Building_mpeg4ip_with_V4L2_support.html \
	MAINREADME.html \
	MP4LIVE_INTERNALS.html \
	MP4LIVE_README.html \
	MPEG4IP_Guide.pdf \
	PLAYER_INTERNALS.html \
	PLAYER_README.html \
	ReadingList.txt \
	about_hint_tracks.txt \
	encoding.htm \
	m4rm.html \
	mp4player.jpg \
	mrm.html \
	pi.html \
	prm.html
